--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,8 @@
             href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
             rel="stylesheet"
     />
-    <title>Document</title>
+    <title>IWantSeats</title>
+    <link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png">
 </head>
 <body>
 <header>
