--- a/login.html
+++ b/login.html
@@ -7,6 +7,8 @@
     <!-- link css -->
     <link href="assets/css/style.css" rel="stylesheet"/>
     <link href="assets/css/form.css" rel="stylesheet"/>
+    <title>IWantSeats</title>
+    <link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png">
 
     <!-- unicons -->
     <link
@@ -120,9 +122,9 @@
             } else if (data['RESULT'] === 'OK') {
                 sessionStorage.setItem('USERNAME', data['USERNAME']);
                 sessionStorage.setItem('TOKEN', data['TOKEN']);
-                if(sessionStorage.getItem('originName')){
+                if (sessionStorage.getItem('originName')) {
                     window.location.href = document.URL.substring(0, document.URL.lastIndexOf('/')) + '/booking.html';
-                }else{
+                } else {
                     window.location.href = document.URL.substring(0, document.URL.lastIndexOf('/')) + '/index.html';
                 }
             } else {
