--- a/booking.html
+++ b/booking.html
@@ -220,7 +220,7 @@
 
                         <div class="payment-block gcash">
                             <div>
-                                <input name="gcash" type="radio"/>
+                                <input class="gcashi" name="gcash" type="radio"/>
                                 <div class="content">
                                     <h3>Pay with GCash</h3>
                                     <p>
@@ -480,7 +480,6 @@
                         <i class="uil uil-calendar-alt"></i>
                         <input id="birthday" name="birthday"
                                onchange="this.className=(this.value!=''?'has-value':'')"
-                               placeholder="mm/dd/yyyy"
                                type="date"
                         />
                     </div>
